# pyGenomeViz

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  README.md  example_run.py  index.html  mkdocs.yml  objects.inv  packages.txt  prek.toml  pyproject.toml  requirements.txt  update_docs_notebook.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish_mkdocs.yml  publish_to_pypi.yml  push_docker_image.yml  stale_issues.yml
.streamlit/: config.toml
api-docs/genbank/: index.html
api-docs/genomeviz/: index.html
api-docs/gff/: index.html
api-docs/segment/: index.html
api-docs/track/: index.html
api-docs/utils/: index.html
api-examples/basic_example/: index.html
api-examples/customization_tips/: index.html
api-examples/gallery_example/: index.html
api-examples/practical_example/: index.html
cli-docs/pgv-blast/: index.html
cli-docs/pgv-mmseqs/: index.html
cli-docs/pgv-mummer/: index.html
cli-docs/pgv-pmauve/: index.html
cli-docs/pgv-simpleplot/: index.html
docs/: getting_started.ipynb  index.md  plot_tips.ipynb
docs/api-docs/: genbank.md  genomeviz.md  gff.md  segment.md  track.md  utils.md
docs/api-examples/: basic_example.ipynb  customization_tips.ipynb  gallery_example.ipynb  practical_example.ipynb
docs/cli-docs/: pgv-blast.md  pgv-mmseqs.md  pgv-mummer.md  pgv-pmauve.md  pgv-simpleplot.md
docs/examples/: basic_example.ipynb  customization_tips.ipynb  gallery_example.ipynb  practical_example.ipynb
docs/gui-docs/: pgv-gui.md
docs/images/: pgv-viewer-demo.html  pgv-viewer_demo1.html
docs/usage-examples/: basic_usage.ipynb  practical_usage.ipynb
example/: example.ipynb  tutorial.ipynb
getting_started/: index.html
gui-docs/pgv-gui/: index.html
images/: pgv-viewer-demo.html  pgv-viewer_demo1.html  pgv-viewer_demo2.html
notebooks/: 01_pygenomeviz_basic_usage.ipynb  02_pygenomeviz_practical_usage.ipynb  03_pygenomeviz_visualization_tips.ipynb  check_figure.ipynb  example.ipynb
notebooks/fastANI/: B_henselae.fna  B_quintana.fna  README.md  fastani.out  fastani.out.visual  pgv-fastani.py  visualize.ipynb  visualize.py
plot_tips/: index.html
search/: search_index.json
src/pygenomeviz/: __init__.py  align.py  config.py  const.py  exception.py  feature.py  genbank.py  genomeviz.py  gff.py  link.py  logger.py  patches.py  track.py  typing.py  utils.py
src/pygenomeviz/align/: __init__.py  coord.py
src/pygenomeviz/align/tool/: __init__.py  base.py  blast.py  last.py  mmseqs.py  mummer.py  pmauve.py
src/pygenomeviz/feature/: __init__.py  base.py  exon.py
src/pygenomeviz/gui/: app.py  config.py  plot.py  utils.py
src/pygenomeviz/parser/: __init__.py  fasta.py  genbank.py  gff.py
src/pygenomeviz/script/: pyGenomeViz.py
src/pygenomeviz/scripts/: __init__.py  blast.py  download.py  download_dataset.py  gui.py  mmseqs.py  mummer.py  pmauve.py  simpleplot.py
src/pygenomeviz/segment/: __init__.py  feature.py
src/pygenomeviz/track/: __init__.py  base.py  feature.py  link.py
src/pygenomeviz/utils/: __init__.py  download.py  helper.py  plot.py
src/pygenomeviz/viewer/: __init__.py  pgv-viewer-template.html
src/pygenomeviz/viewer/assets/: pgv-viewer.js
src/pygenomeviz/viewer/assets/lib/: jquery-ui.min.css  jquery-ui.min.js  micromodal.css  panzoom.min.js  spectrum.min.css  spectrum.min.js
src/pygenomeviz/viewer/assets/lib/types/: micromodal.d.ts  tabulator.d.ts
tests/: conftest.py  marker.py  test_feature.py  test_genbank.py  test_genomeviz.py  test_link.py  test_scripts.py  test_track.py  test_utils.py
tests/align/: test_coord.py
tests/align/tool/: test_base.py  test_blast.py  test_last.py  test_mmseqs.py  test_mummer.py  test_pmauve.py
tests/gui/: test_app.py
tests/parser/: test_fasta.py  test_genbank.py  test_gff.py
tests/scripts/: test_blast.py  test_download.py  test_gui.py  test_mmseqs.py  test_mummer.py  test_pmauve.py
tests/testdata/: test.gbff.bz2
tests/testdata/fasta/: test.fna  test.fna.bz2
tests/testdata/fasta/influA/: influA_Korea.fna  influA_NewYork.fna  influA_Shanghai.fna
tests/testdata/genbank/: multi_record.gbff  test.gbff  test.gbff.bz2
tests/testdata/genbank/influA/: influA_California.gbff  influA_Korea.gbff  influA_NewYork.gbff  influA_Shanghai.gbff
tests/testdata/gff/: multi_record.gff  test.gff  test.gff.bz2
tests/track/: test_feature.py
tests/utils/: test_download.py  test_helper.py  test_plot.py
