[project]
name = "pygenomeviz"
description = "A genome visualization python package for comparative genomics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "moshi4" }]
keywords = [
  "bioinformatics",
  "comparative-genomics",
  "genomics",
  "matplotlib",
  "visualization",
]
classifiers = [
  "Framework :: Matplotlib",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["biopython>=1.80", "matplotlib>=3.6.3", "numpy>=1.21"]
dynamic = ["version"]

[project.urls]
homepage = "https://moshi4.github.io/pyGenomeViz/"
repository = "https://github.com/moshi4/pyGenomeViz/"

[project.scripts]
pgv-blast = "pygenomeviz.scripts.blast:main"
pgv-download = "pygenomeviz.scripts.download:main"
pgv-gui = "pygenomeviz.scripts.gui:main"
pgv-mmseqs = "pygenomeviz.scripts.mmseqs:main"
pgv-mummer = "pygenomeviz.scripts.mummer:main"
pgv-pmauve = "pygenomeviz.scripts.pmauve:main"

[project.optional-dependencies]
gui = ["streamlit>=1.48.0"]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "jupyter" },
  { include-group = "lint" },
  { include-group = "test" },
]
docs = [
  "black>=22.3.0",
  "markdown-callouts>=0.4.0",
  "mkdocs>=1.2",
  "mkdocs-jupyter>=0.21.0",
  "mkdocs-material>=8.2",
  "mkdocstrings[python]>=0.19.0",
]
jupyter = ["ipykernel>=6.13.0"]
lint = ["prek>=0.4.0", "ruff>=0.4.0", "ty>=0.0.37"]
test = ["pytest>=8.0.0", "pytest-cov>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
patch = ["subprocess"]

[tool.hatch.version]
path = "src/pygenomeviz/__init__.py"

[tool.pytest.ini_options]
addopts = "--cov=src --tb=long -vv --cov-report=xml --cov-report=term"
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

# Lint Rules: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
  "I",  # isort
  "F",  # pyflakes
  "E",  # pycodestyle (Error)
  "W",  # pycodestyle (Warning)
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "PL",  # Pylint
  "ANN",  # flake8-annotations
  "TC",  # flake8-type-checking
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "RUF",  # Ruff-specific rules
]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D205",  # 1 blank line required between summary line and description
  "D400",  # First line should end with a period
  "D401",  # First line should be in imperative mood
  "D403",  # First word of the first line should be properly capitalized
  "D415",  # First line should end with a period, question mark, or exclamation point
  "ANN002",  # Missing type annotation for *{name}
  "ANN003",  # Missing type annotation for **{name}
  "PTH123",  # open() should be replaced by Path.open()
  "PLR0913",  # Too many arguments in function definition ({c_args} > {max_args})
  "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901",  # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.src]
include = ["src", "tests"]
